--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.9",
     "dompurify": "^3.2.3",
     "express": "^4.21.2",
+    "formidable": "^3.5.2",
     "multer": "^1.4.5-lts.1",
     "next": "15.1.1",
     "quill": "^2.0.3",
@@ -35,11 +36,13 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
     "react-rnd": "^10.4.14",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/express": "^5.0.0",
+    "@types/formidable": "^3.4.5",
     "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^19",
