--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/env": "^15.1.1",
+    "@nextui-org/system": "^2.4.5",
     "@prisma/client": "^6.1.0",
     "@tiptap/core": "^2.10.4",
     "@tiptap/extension-bullet-list": "^2.10.4",
@@ -24,12 +25,16 @@
     "@tiptap/pm": "^2.10.4",
     "@tiptap/react": "^2.10.4",
     "@tiptap/starter-kit": "^2.10.4",
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "dompurify": "^3.2.3",
     "express": "^4.21.2",
     "formidable": "^3.5.2",
     "multer": "^1.4.5-lts.1",
-    "next": "15.1.1",
+    "next": "^15.1.3",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.4",
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -48,7 +53,9 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-icons": "^2.2.7",
-    "eslint": "^9",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
+    "eslint": "^9.17.0",
     "eslint-config-next": "15.1.1",
     "postcss": "^8",
     "prisma": "^6.1.0",
