--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@eslint/eslintrc": "^3",
     "@types/express": "^5.0.0",
     "@types/formidable": "^3.4.5",
+    "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^19",
